--- a/HW0-Introduce.ipynb
+++ b/HW0-Introduce.ipynb
@@ -697,7 +697,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. What is reinforcement learning and its component according to your understanding? Giving examples of each component according to the diagram consider the `Cartpole` problem."
+    "#### 1. What is reinforcement learning and its component according to your understanding? Giving examples of each component according to the diagram consider the `Cartpole` problem."
    ]
   },
   {
@@ -775,7 +775,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. What is the difference between the reward, return, and the value function?"
+    "#### 2. What is the difference between the reward, return, and the value function?"
    ]
   },
   {
@@ -783,26 +783,68 @@
    "metadata": {},
    "source": [
     "- **`Reward`** : A scalar feedback that told the agent how good the action is in time `t`.\n",
-    "- **`Return`** : Cumulative reward (from t+1, t+2, ... ) that we want to maximize.\n",
+    "- **`Return`** : Cumulative reward (from t+1, t+2, ... ) that we want to maximize(to get a optimal policy).\n",
+    "    $$\n",
+    "    G_t = R_{t+1} + R_{t+2} + R_{t+3} + ...\n",
+    "    $$\n",
     "- **`Value function`** : Expected value of return given state and action choosen from policy\n",
-    "    - Probablity of next action from current state"
+    "    - 1. State-Value Function : A function that determines the expected value of the state, given a policy\n",
+    "        $$\n",
+    "        v_{\\pi}(s) = \\mathbb{E}[R_{t+1} + \\gamma v_{\\pi}(S_{t+1}) | S_{t} = s , A_t \\sim \\pi(s)]\n",
+    "        $$\n",
+    "    - 2. Action-Value Function : Represents the expected return starting from state s and take action a.\n",
+    "        $$\n",
+    "        q(s,a) = \\mathbb{E}[G_t | S_t = s , A_t = a]\n",
+    "        $$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Consider policy, state, value function, and model as mathematic functions, what would each one take as input and output?"
+    "#### 3. Consider policy, state, value function, and model as mathematic functions, what would each one take as input and output?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Policy**\n",
+    "- Including with 2 type but always \n",
+    "    1. Deterministic Policy : $\\pi(S) = A$ \n",
+    "    2. Stochastic Policy : $\\pi(A|S) = p(A|S)$\n",
+    "- Input : A state\n",
+    "- Output\n",
+    "    - Deterministic Policy : a single action\n",
+    "    - Stochastic Policy : outputs a probability distribution over possible actions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**State**\n",
+    "- both of agent state and environment state\n",
+    "- Input : None (got update from environment)\n",
+    "- Output : None (it's got update by another function)\n",
+    "- in case of Agent State can update by another function\n",
+    "    - A state of the agent in this case is a function of history and state is update by `state update function [u]`\n",
+    "    $$\n",
+    "    S_{t+1} = u(S_t,A_t,R_{t+1},O_{t+1})\n",
+    "    $$\n",
+    "    - `state update function [u]` have input is current state,action, reward and observation at next time step floowing the equation and output with next state"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Value Function**\n",
+    "\n",
     "from **Bellman Equation**\n",
     "\n",
     "$$\n",
-    "v_{\\pi} = \\mathbb{E}[R_{t+1} + \\gamma v_{\\pi}(S_{t+1}) | S_{t} = s , A_t \\sim \\pi(s)]\n",
+    "v_{\\pi}(s) = \\mathbb{E}[R_{t+1} + \\gamma v_{\\pi}(S_{t+1}) | S_{t} = s , A_t \\sim \\pi(s)]\n",
     "$$\n",
     "\n",
     "In RL we try to find the optimal policy from maximize return, to maximize we need to known current state, action from policy then we can know the probability of action in next time step from policy and we can find expected value\n",
