--- a/HW0-Introduce.ipynb
+++ b/HW0-Introduce.ipynb
@@ -377,7 +377,7 @@
     "    joint_effort = mdp.JointEffortActionCfg(asset_name=\"robot\", joint_names=[\"slider_to_cart\"], scale=100.0)\n",
     "    ```\n",
     "    - create an action term that controls the force applied to the cart(joint effort). to the cart to balance the pole\n",
-    "    - have 1  for action space\n",
+    "    - have 1  for action space (joint effort)\n",
     "\n",
     "- **Observation Space** : in line 66\n",
     "\n",
